--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,7 +1,7 @@
 <%= link_to "Add a movie", new_list_bookmark_path(@list) %>
 
-<ul>
-  <% @list.movies.each do |movie| %>
-     <li><%= movie.title %></li>
-  <% end %>
-</ul>
+<% @list.movies.each do |movie| %>
+  <li><%= movie.title %></li>
+<% end %>
+
+<%= link_to "Go back", lists_path %>
